# ComfyUI-Hand-Analyzer

./: .gitignore  __init__.py  conftest.py  pyproject.toml  requirements.txt
nodes/: __init__.py  repair_prompt.py  report_formatter.py
src/hand_analyzer/: __init__.py  color_consistency.py
workflows/: hand_analysis_example.json
